--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".WelcomeActivity"/>
+        <activity
+            android:name=".OnboardingActivity"/>
+        <activity
+            android:name=".LoginActivity"/>
+        <activity
+            android:name=".SignUpActivity"/>
+
     </application>
 
 </manifest>
