Add 2 more Onboarding

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <activity
             android:name=".OnboardingActivity"/>
         <activity
+            android:name=".OnboardingActivity1"/>
+        <activity
+            android:name=".OnboardingActivity2"/>
+        <activity
             android:name=".LoginActivity"/>
         <activity
             android:name=".SignUpActivity"/>
