--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,10 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    // - - ViewModel
+    def lifecycle_version = "2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.2.0"
+    implementation 'androidx.datastore:datastore-preferences:1.0.0-rc01'
+    implementation 'androidx.datastore:datastore-preferences-core:1.0.0-rc01'
 }
