--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,27 +11,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.K_Login_Signup">
         <activity
-            android:name=".activity.MainActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity android:name=".activity.WelcomeActivity" />
-        <activity android:name=".activity.OnboardingActivity" />
-        <activity android:name=".activity.OnboardingActivity1" />
-        <activity android:name=".activity.OnboardingActivity2" />
-        <activity android:name=".activity.LoginActivity" />
-        <activity android:name=".activity.SignUpActivity" />
-        <activity android:name=".activity.ProfileActivity" />
-        <activity android:name=".activity.Profile" />
-        <activity android:name=".activity.MenuListActivity"
-            android:exported="true">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activity.LoginActivity" />
+<!--        </activity>-->
+<!--        <activity android:name=".activity.WelcomeActivity" />-->
+<!--        <activity android:name=".activity.OnboardingActivity" />-->
+<!--        <activity android:name=".activity.OnboardingActivity1" />-->
+<!--        <activity android:name=".activity.OnboardingActivity2" />-->
+<!--        <activity android:name=".activity.LoginActivity" />-->
+<!--        <activity android:name=".activity.SignUpActivity" />-->
+<!--        <activity android:name=".activity.ProfileActivity" />-->
+<!--        <activity android:name=".activity.Profile" />-->
+<!--        <activity android:name=".activity.MenuListActivity"-->
+<!--            android:exported="true">-->
+<!--            <meta-data-->
+<!--                android:name="android.support.PARENT_ACTIVITY"-->
+<!--                android:value=".activity.LoginActivity" />-->
         </activity>
     </application>
 
