--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,8 @@ dependencies {
     //navigation
     implementation "androidx.navigation:navigation-fragment-ktx:2.4.2"
     implementation "android.arch.navigation:navigation-ui-ktx:1.0.0"
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.google.code.gson:gson:2.6.2'
 }
